compiler/kernc_cli/tests/soundness/reject/projection/mutually_recursive_associated_projection_cycle.kn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection cycle: X.A.Out -> X.B.Out -> X.A.Out

trait A {
    type Out;
};

trait B {
    type Out;
};

struct X {};

impl X: A {
    type Out = X.B.Out;
}

impl X: B {
    type Out = X.A.Out;
}

fn project(value: X) X.A.Out {
    _ = value;
    return X.{};
}

fn main() i32 {
    _ = project(X.{});
    return 0;
}
